# Otello_Project

./: CMakeLists.txt  README.md
otello_client/: CMakeLists.txt  main.cpp
otello_client/HeaderFiles/: AI.h  base.h  connecting.h  judgement.h  loginmenu.h  otelloboard.h
otello_client/SourceFiles/: AI.cpp  base.cpp  connecting.cpp  judgement.cpp  loginmenu.cpp  otelloboard.cpp
